--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,23 @@
         <div class="sub-menu">
           <a class="sub-item" href="/api/youtube?URL=https://www.youtube.com/watch?v=1cdsbYuLahc&type=mp4&quality=360" target="_blank"><i>Youtube Video</i></a>
           <a class="sub-item" href="/api/youtube?URL=https://www.youtube.com/watch?v=1cdsbYuLahc&type=mp3&quality=128" target="_blank"><i>Youtube Audio</i></a>
+          <a class="sub-item" href="/api/instagram?URL=https://www.instagram.com/p/CaEOUIXFHLZ/?utm_source=ig_web_copy_link" target="_blank"><i>Instagram Downloader</i></a>
+          <a class="sub-item" href="/api/instagramStory?URL=punipun7" target="_blank"><i>Instagram Story</i></a>
+          <a class="sub-item" href="/api/tiktok?URL=https://vm.tiktok.com/ZSe7N1rps/" target="_blank"><i>Tiktok Downloader</i></a>
+          <a class="sub-item" href="/api/twitter?URL=https://twitter.com/PassengersMovie/status/821025484150423557" target="_blank"><i>Twitter Downloader</i></a>
+          <a class="sub-item" href="/api/facebook?URL=https://fb.watch/8S1soLknDj/" target="_blank"><i>Facebook Downloader</i></a>
+          <a class="sub-item" href="/api/soundcloud?URL=https://soundcloud.com/oryza-sativa-922885232/bukan-sa-lagi" target="_blank"><i>Soundcloud Downloader</i></a>
+        </div>
+      </div>
+      <div class="item">
+        <a class="sub-btn"><i class="fas fa-archive"></i>Other<i class="fas fa-angle-right dropdown"></i></a>
+        <div class="sub-menu">
+          <a class="sub-item" href="/api/nhread/388177" target="_blank"><i>Nhentai Reader</i></a>
+          <a class="sub-item" href="/api/nhdetail?code=388177" target="_blank"><i>Nhentai Detail</i></a>
+          <a class="sub-item" href="/api/nhartist?artist=crimson&page=1" target="_blank"><i>Nhentai Artist</i></a>
+          <a class="sub-item" href="/api/nhtag?tag=yuri&page=1" target="_blank"><i>Nhentai Tag</i></a>
+          <a class="sub-item" href="/api/nhhome?page=1" target="_blank"><i>Nhentai Home</i></a>
+          <a class="sub-item" href="/api/nhsearch?query=hutao&page=1" target="_blank"><i>Nhentai Search</i></a>
         </div>
       </div>
     </div>
